<resources>
    <string name="app_name">BATO</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="regfname">First Name</string>
    <string name="reglname">Last Name</string>
    <string name="reguname">Username</string>
    <string name="regpass">Password</string>
    <string name="regrpass">Password</string>
    <string name="regaddress">Address</string>
    <string name="regemail">Email</string>
</resources>
