<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="30" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvfirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regfname"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:ems="10"
                android:inputType="text" >
            </EditText>

            <TextView
                android:id="@+id/tvlastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglname"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regaddress"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ,-.1234567890"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regemail"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reguname"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regpass"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvrepeatpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regpass"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/etrepeatpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/SignupButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttonshape"
            android:text="Register"
            android:textColor="#FFF7F7"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>